--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
-    "babel-jest": "^25.5.1",
-    "babel-preset-env": "^1.7.0",
+    "babel-jest": "^29.7.0",
+    "babel-preset-env": "^0.0.0",
     "codecov": "^3.8.3",
     "eslint": "^8.50.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/kschingiz/meteor-elastic-apm#readme",
   "dependencies": {
-    "elastic-apm-node": "3.15.0",
+    "elastic-apm-node": "^4.8.0",
     "shimmer": "1.2.1"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
